--- a/styles/header.css
+++ b/styles/header.css
@@ -43,11 +43,6 @@
     background-color: var(--branco);
 }
 
-.lista-menu__titulo, .lista-menu__item {
-    padding: 1em;
-    background-color: var(--branco);
-}
-
 .lista-menu__titulo{
     color: var(--laranja);
     font-weight: 700;
@@ -110,8 +105,9 @@
         display: none;
     }
 
-    .opcoes__menu:checked, .lista-menu{
+    .opcoes__botao:checked ~ .lista-menu{
         display: block;
+        width: auto;
     }
 
     .opcoes__botao{
