--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -20,6 +20,7 @@
 .topicos__item{
     margin: 2em 0.5em;
 }
+
 .topicos__link{
     color: var(--branco);
     padding: 1em;
@@ -28,3 +29,15 @@
     font-size: 14px;
     font-weight: 700;
 }
+
+@media screen and (min-width: 1024px) {
+    .topicos__titulo{
+        font-size: 24px;
+    }
+
+    .topicos__link{
+        font-size: 24px;
+    }
+
+}
+    
