--- a/styles/banner.css
+++ b/styles/banner.css
@@ -50,3 +50,20 @@
     }
     
 }
+
+@media screen and (min-width: 1728px) {
+    .banner__pesquisa{
+        width: 35%;
+    }
+
+    .banner__pesquisa::placeholder{
+        background-position: 12em;
+    }
+
+    .banner{
+        padding: 6em 0;
+    }
+
+
+    
+}
