--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -88,11 +88,11 @@
 
     .swiper-button-next, .swiper-button-prev{
         display: block;
-        top: 35%;
+        top: 60%;
     }
 
     .card{
-        width: 70%;
+        width: 40%;
         margin: 2em auto;
     }
 
@@ -102,6 +102,37 @@
 @media screen and (min-width: 1728px){
     .carrossel__container{
         display: flex;
+        margin: 0 20vw 3em 20vw;
+        align-items: center;
     }
     
+    .swiper-pagination{
+        margin: 1em 0;
+    }
+
+    .swiper{
+        width: 50%;
+    }
+
+    .descricao__titulo{
+        font-size: 32px;
+    }
+
+    .descricao__texto{
+        font-size: 16px;
+    }
+    
+    .descricao{
+        margin-right: 2em;
+    }
+
+    .card{
+        width: 60%;
+        margin-left: 3em;
+    }
+
+
+
+
+
 }
