--- a/styles/header.css
+++ b/styles/header.css
@@ -8,6 +8,14 @@
     display: inline-block;
 }
 
+.container__botao:checked ~ .menu__label > .cabecalho__menu-hamburguer{
+    background-image: url("../img/Menu\ Aberto.svg");
+}
+
+.container__botao:checked ~ .menu__label{
+    background: var(--azul-degrade);
+}
+
 .cabecalho {
     background-color: var(--branco);
     display: flex;
@@ -117,6 +125,26 @@
     .opcoes__botao{
         display: none;
     }
+
+    .opcoes__botao:checked ~ .opcoes__label > .opcoes__item {
+        background: var(--azul-degrade);
+        color: var(--branco);
+    }
+
+    .opcoes__item{
+        padding: 2em 1em;
+    }
+
+    .lista-menu__item:hover {
+        background: var(--azul-degrade);
+    } 
+
+    .lista-menu__item:hover > .lista-menu__item {
+        -webkit-text-fill-color: var(--branco);
+        text-decoration: none;
+    }
+
+
 
 }
 
